# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/boards/${board}.gni")
import("//build/templates/build_template.gni")
import("//build/toolchain/blueos.gni")
import("tm_case.gni")

build_rust("thread_metric") {
  sources = [ "src/lib.rs" ]
  configs += [ "//build/boards/${board}:kernel_config" ]
  deps = board_deps
  deps += [
    "//kernel/kconfig:blueos_kconfig",
    "//kernel/kernel:blueos",
    "//libc",
    "//librs",
  ]
}

tm_case("tm_basic_process_test") {
  sources = [ "//external/thread_metric/v6.4.2/src/tm_basic_processing_test.c" ]
}

tm_case("tm_preemptive_scheduling_test") {
  sources =
      [ "//external/thread_metric/v6.4.2/src/tm_preemptive_scheduling_test.c" ]
}

# FIXME: We are not enabling this one since RR-scheduler has large impact
# on the correctness this case requires.
tm_case("tm_cooperative_scheduling_test") {
  sources =
      [ "//external/thread_metric/v6.4.2/src/tm_cooperative_scheduling_test.c" ]
}

tm_case("tm_synchronization_processing_test") {
  sources = [
    "//external/thread_metric/v6.4.2/src/tm_synchronization_processing_test.c",
  ]
}

tm_case("tm_memory_allocation_test") {
  sources =
      [ "//external/thread_metric/v6.4.2/src/tm_memory_allocation_test.c" ]
}

group("run_tests") {
  testonly = true
  deps = [
    ":run_tm_basic_process_test",
    ":run_tm_memory_allocation_test",
    ":run_tm_preemptive_scheduling_test",
    ":run_tm_synchronization_processing_test",
  ]
}
