# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

set_default_toolchain("//build/toolchain:blueos_thumbv8m")
llvm_target = "thumbv8m.main-none-eabihf"
qemu_exe = "qemu-system-arm"
machine = "mps3-an547"
libc_toolchain = "//build/toolchain:blueos_thumbv8m"
librs_linux_emulation_toolchain =
    "//build/toolchain:librs_linux_emulation_thumbv8m"
kernel_toolchain = "//build/toolchain:blueos_thumbv8m"
use_defmt = true
chip = "RP235x"
